--- a/src/SuzysProject/wwwroot/css/site.css
+++ b/src/SuzysProject/wwwroot/css/site.css
@@ -17,8 +17,14 @@ textarea
   margin:5px 0;
   padding:3px;
 }
+textarea {
+     font-family: 'Gloria Hallelujah', cursive;
+                    /*'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;*/
+                font-size:large;  
+}
+
     .example-one {            
-                font-family: 'Chewy', cursive;
+                font-family: 'Gloria Hallelujah', cursive;
                     /*'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;*/
                 font-size:large;  
                 font-style:italic;             
