--- a/src/SuzysProject/wwwroot/ngApp/views/MyHome.html
+++ b/src/SuzysProject/wwwroot/ngApp/views/MyHome.html
@@ -5,10 +5,25 @@
 <div>
     <div style="color:maroon" >    
          <h1 style="padding-bottom:4%;">Welcome to DreamDiary.com</h1>
-        <img src="../../images/dreams.jpg" height="400" width="250" />
-        <img src="../../images/dreamsocean366.jpg" height="400" width="250" />
-        <img src="../../images/flying.jpg" height="400" width="250" />
-       
+
+
+        
+        <img src="../../images/endless-ocean-gif.gif" height="250" width="300"/>     
+        <img src="../../images/dreams.jpg" height="250" width="150" />
+        <img src="../../images/beautiful-sun-reflecting-in-water-rock-bottom-river-brook-animated-gif (1).gif" height="250" width="300"/>
+        <img src="../../images/flying.jpg" height="250" width="150" />
+        </br>
+        <img src="../../images/dream-research-news-e1378437014218.jpg" height="250" width="150"/>
+        <img src="../../images/rain-nature-animated-gif-23.gif" height="250" width="300" />
+        <img src="../../images/dreamsocean366.jpg" height="250" width="150" />
+        <img src="../../images/rain-nature-animated-gif-4.gif" height="250" width="300" />
+
+        
+        
+     
+     
+            
+    
     </div style="color:maroon">
 </div>
 
