--- a/src/SuzysProject/wwwroot/ngApp/views/suzy.html
+++ b/src/SuzysProject/wwwroot/ngApp/views/suzy.html
@@ -1,9 +1,5 @@
 
-
    
-        
-
-    
     <div class="col-lg-6 col-lg-offset-3">
         <div style="margin:2%;" class="form-group; header-styling ">
             <div style="color:maroon">
@@ -14,11 +10,9 @@
                 <table style="width:100%"></table>
             </div>
         </div>
-
-
         <div class="panel panel-danger">
             <div class="panel-heading">Dreams</div>
-            <div class="panel-body">
+            <div class="panel-body alert-danger">
                 <table class="table table-striped">
                     <thead>
                         <tr>
