--- a/src/SuzysProject/Views/Home/Index.cshtml
+++ b/src/SuzysProject/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     </button>
                     <a class="navbar-brand" href="#"></a>
                 </div>
-
+                <!---nav bar and login/logout-->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a  style="color:maroon" href="/">Home<span class="sr-only">(current)</span></a></li>
